@@ -22,6 +22,9 @@ CK2Title::CK2Title(string _titleString, int* _color)
 	nominees.clear();
 	history.clear();
 	CA						= "";
+	feudalContract		= 0;
+	templeContract		= 0;
+	cityContract		= 0;
 	liegeString			= "";
 	liege					= NULL;
 	vassals.clear();
@@ -81,13 +84,28 @@ void CK2Title::init(Object* obj,  map<int, CK2Character*>& characters, const CK2
 		}
 	}
 
-	CA = "";
+	CA					= "";
+	feudalContract	= 0;
+	templeContract	= 0;
+	cityContract	= 0;
 	vector<Object*> lawObj = obj->getValue("law");
 	for (unsigned int i = 0; i < lawObj.size(); i++)
 	{
 		if (lawObj[i]->getLeaf().substr(0, 14) == "centralization")
 		{
 			CA = lawObj[i]->getLeaf();
+		}
+		else if (lawObj[i]->getLeaf().substr(0, 15) == "feudal_contract")
+		{
+			feudalContract = atoi( lawObj[i]->getLeaf().substr(16,1).c_str() );
+		}
+		else if (lawObj[i]->getLeaf().substr(0, 15) == "temple_contract")
+		{
+			templeContract = atoi( lawObj[i]->getLeaf().substr(16,1).c_str() );
+		}
+		else if (lawObj[i]->getLeaf().substr(0, 13) == "city_contract")
+		{
+			cityContract = atoi( lawObj[i]->getLeaf().substr(14,1).c_str() );
 		}
 	}
 
